# helloworld-qt-conan

./: CMakeLists.txt  README.md  conanfile.py  hello.cpp  window.cpp  window.h
